cuda_ops_test/gen_bang_results/86_conv_depthwise_separable_2D-output.txt
warning: CUDA version 12.1 is only partially supported
./cuda_ops/86_conv_depthwise_separable_2D.cu:6:16: error: expected namespace name
    6 | namespace py = pybind11;
      |                ^
